FlightPath 5.x Changelog
========================

2016-06-29
  Fixed bug in Substitution system for split transfer subs, where hours were not being reported correctly.


2016-06-26
  Fixed bug in substitution reporting, where it wasn't correctly finding the split sub hours for transfer credits.
  
  Added new hook to core; to be able to alter footnotes.


2016-06-17
  Fixed bugs with substitution footnotes, in AdvisingScreenTypeView.  Substitutions were not being accurately displayed for footnotes.

  Added extra indexes to the box_array in AdvisingScreen, so it makes it easier to overwrite certain screen elements for other modules. 
  

2016-06-13
  Made alterations to fix a bug where the group a course was substituted into was not being reported correctly.
  

2016-05-25
  Converted the process that runs all group definitions for a year to a Batch API process, for better memory management and UI.
  

2016-05-24
  Added extra logic so that test scores with a date of null or 0000-00-00 will be given an "N/A" date, as well as extra CSS to help
  style the test scores.
  

2016-05-20
  Added setting to School Data form (system.module) for excluding degrees from "appears in" counts.
  
  Added method to DatabaseHandler-- get_degree_ids().
  

2016-05-19
  Adding "appears-in" counts for group select rows as well.


2016-05-16
  Added a new hook to let other modules decide if a course should be assigned to a particular degree or not.
  
  Removed some redundant database queries to help reduce queries per page load.


2016-05-11
  Added to AdvisingScreen so we add extra classes when a course appears in more than one degree.
    

2016-05-10
  Created an array in DegreePlan to keep track of every course that degree can possibly use.
  
  Added to $theme when drawing course rows, so we can move the degree_plan around as well.


2016-05-06